@@ -726,6 +726,5 @@ socket_timeout = 20
 
 	[[ReportEngine]]
 	# The list of reports the report engine should run:
-#		report_list = weewx.reportengine.FileGen, weewx.reportengine.ImageGen, weewx.reportengine.Ftp
-		report_list = weewx.reportengine.FileGen,
+		report_list = weewx.reportengine.FileGen, weewx.reportengine.ImageGen, weewx.reportengine.Ftp
 		
